# htmap

./: CMakeLists.txt  README.md  package.xml
include/hamap/: Hamap.h
include/hamap/bayes/: BayesFilter.h
include/hamap/imgdesc/: GlobalDescriptor.h  KeypointDescriptor.h  KeypointDetector.h  ldb.h
include/hamap/util/: Image.h  Params.h  Util.h
include/htmap/: HTMap.h
include/htmap/bayes/: BayesFilter.h
include/htmap/imgdesc/: GlobalDescriptor.h  GridAdaptedFeatureDetector.h  KeypointDescriptor.h  KeypointDetector.h
include/htmap/lc/: LoopCloser.h
include/htmap/map/: HighLevelMap.h  Location.h
include/htmap/util/: Image.h  Params.h  Statistics.h  Util.h
launch/: hamap_node.launch  htmap.launch
matlab/: PR.m  PR_batch.m  PR_curve.m  computeDistance.m  computeGPSDist.m  computeTotalDistanceGPS.m  correct_fabmap_pdf.m  generateGroundTruth.m  get_files.m  haversine.m  load_loops_data.m  plot_descinfo.m  plot_descinfo_full.m  plot_descinfo_node.m  plot_path.m  plot_paths_CC.m  plot_paths_NC.m  plot_pdf.m  plot_probs.m  plot_times.m  plot_times_bars.m  plot_topmap.m  pr_curves.m  print_likelihood.m  process_fabmap_file.m  show_gen_gt.m  sparsity.m  transform_fabmap.m  translate_poses.m
matlab/gtruths/: groundtruth_CC.mat  groundtruth_KITTI00.mat  groundtruth_KITTI05.mat  groundtruth_KITTI06.mat  groundtruth_NC.mat  groundtruth_StLucia.mat
matlab/phog/: anna_binMatrix.m  anna_phog.m  anna_phogDescriptor.m  anna_phog_demo.m  image_0058.jpg.txt  readme.txt
ros/: README.md  ros.def
src/: HTMap.cpp  Hamap.cpp
src/bayes/: BayesFilter.cpp
src/imgdesc/: GlobalDescriptor.cpp  GridAdaptedFeatureDetector.cpp  KeypointDescriptor.cpp  KeypointDetector.cpp  ldb.cpp
src/lc/: LoopCloser.cpp
src/map/: HighLevelMap.cpp  Location.cpp
src/nodes/: HTMap_node.cpp  Hamap_node.cpp
src/util/: Params.cpp  Statistics.cpp  Util.cpp
