<package>
    <name>htmap</name>
    <version>0.1.0</version>
    <description>HTMAP: Hierarchical Topological Mapping</description>

    <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
    <author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>
    <license>GPLv3</license>
    <url type="website">http://wiki.ros.org/htmap</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>obindex</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>obindex</run_depend>
</package>
